# icp_trajectory_alignment_osm

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
launch/: README.md  helsinki.launch.py  kitti.launch.py  osm_align.launch.py
osm_align/: __init__.py  helsinki_node.py  kitti_node.py  kitti_odometry.py  kitti_utils.py  map_osm_viz.py  odometry.py  odometry_correction.py  utils.py  viz_map_node.py
osm_align/experiment/: kitti_test.py  run_grid.py
osm_align/utils/: __init__.py  kitti_utils.py  utils.py
osm_align/web/: trajectory_plot.html
rviz/: helsinki.rviz  kitti.rviz
script/: get_osm_lanlet.py
web/: car_following.html
